Add permission update handling